@@ -2,17 +2,17 @@ import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
 import org.jetbrains.kotlin.gradle.plugin.mpp.KotlinNativeTarget
 import org.jetbrains.kotlin.gradle.plugin.mpp.KotlinUsages
 import org.jetbrains.kotlin.gradle.targets.js.KotlinJsCompilerAttribute
-import org.jetbrains.kotlin.gradle.targets.js.d8.D8RootPlugin
 import org.jetbrains.kotlin.konan.target.HostManager
 
 description = "Atomicfu Compiler Plugin"
 
 plugins {
     kotlin("jvm")
-    id("jps-compatible")
+    id("d8-configuration")
+    id("project-tests-convention")
 }
 
-// WARNING: Native target is host-dependent. Re-running the same build on another host OS may bring to a different result.
+// WARNING: Native target is host-dependent. Re-running the same build on another host OS may give a different result.
 val nativeTargetName = HostManager.host.name
 
 val antLauncherJar by configurations.creating
@@ -35,7 +35,7 @@ val atomicfuJvmClasspath by configurations.creating
 val atomicfuNativeKlib by configurations.creating {
     attributes {
         attribute(KotlinPlatformType.attribute, KotlinPlatformType.native)
-        // WARNING: Native target is host-dependent. Re-running the same build on another host OS may bring to a different result.
+        // WARNING: Native target is host-dependent. Re-running the same build on another host OS may give a different result.
         attribute(KotlinNativeTarget.konanTargetAttribute, nativeTargetName)
         attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
         attribute(KotlinPlatformType.attribute, KotlinPlatformType.native)
@@ -58,79 +58,98 @@ repositories {
 
 dependencies {
     compileOnly(intellijCore())
-    compileOnly(commonDependency("org.jetbrains.intellij.deps:asm-all"))
+    compileOnly(libs.intellij.asm)
+
+    compileOnly(project(":compiler:fir:cones"))
+    compileOnly(project(":compiler:fir:tree"))
+    compileOnly(project(":compiler:fir:resolve"))
+    compileOnly(project(":compiler:fir:plugin-utils"))
+    compileOnly(project(":compiler:fir:checkers"))
+    compileOnly(project(":compiler:fir:fir2ir"))
+    compileOnly(project(":compiler:fir:entrypoint"))
 
     compileOnly(project(":compiler:plugin-api"))
-    compileOnly(project(":compiler:cli-common"))
+    compileOnly(project(":compiler:cli-base"))
     compileOnly(project(":compiler:frontend"))
     compileOnly(project(":compiler:backend"))
     compileOnly(project(":compiler:ir.backend.common"))
 
-    compileOnly(project(":js:js.frontend"))
-    compileOnly(project(":js:js.translator"))
     compileOnly(project(":compiler:backend.js"))
 
     compileOnly(project(":compiler:backend.jvm"))
     compileOnly(project(":compiler:ir.tree"))
+    compileOnly(project(":native:native.config"))
 
     compileOnly(kotlinStdlib())
 
-    testApi(projectTests(":compiler:tests-common"))
-    testApi(projectTests(":compiler:test-infrastructure"))
-    testApi(projectTests(":compiler:test-infrastructure-utils"))
-    testApi(projectTests(":compiler:tests-compiler-utils"))
-    testApi(projectTests(":compiler:tests-common-new"))
-    testImplementation(projectTests(":generators:test-generator"))
+    testImplementation(testFixtures(project(":compiler:tests-common")))
+    testImplementation(testFixtures(project(":compiler:test-infrastructure")))
+    testImplementation(testFixtures(project(":compiler:test-infrastructure-utils")))
+    testImplementation(testFixtures(project(":compiler:tests-compiler-utils")))
+    testImplementation(testFixtures(project(":compiler:tests-common-new")))
+    testImplementation(testFixtures(project(":generators:test-generator")))
+    testImplementation(project(":plugins:plugin-sandbox"))
+    testImplementation(project(":compiler:incremental-compilation-impl"))
+    testImplementation(testFixtures(project(":compiler:incremental-compilation-impl")))
 
-    testImplementation(projectTests(":js:js.tests"))
-    testApi(commonDependency("junit:junit"))
-    testApi(project(":kotlin-test:kotlin-test-jvm"))
+    testImplementation(testFixtures(project(":js:js.tests")))
+    testImplementation(libs.junit4)
+    testImplementation(kotlinTest())
 
     // Dependencies for Kotlin/Native test infra:
-    if (!kotlinBuildProperties.isInIdeaSync) {
-        testImplementation(projectTests(":native:native.tests"))
+    if (!kotlinBuildProperties.isInIdeaSync.get()) {
+        testImplementation(testFixtures(project(":native:native.tests")))
     }
+    testImplementation(project(":compiler:ir.backend.native"))
     testImplementation(project(":native:kotlin-native-utils"))
+    testImplementation(testFixtures(project(":native:native.tests:klib-ir-inliner")))
+    testImplementation(project(":kotlin-util-klib-abi"))
     testImplementation(commonDependency("org.jetbrains.teamcity:serviceMessages"))
 
     // todo: remove unnecessary dependencies
     testImplementation(project(":kotlin-compiler-runner-unshaded"))
 
-    testImplementation(commonDependency("commons-lang:commons-lang"))
-    testImplementation(projectTests(":compiler:tests-common"))
-    testImplementation(projectTests(":compiler:tests-common-new"))
-    testImplementation(projectTests(":compiler:test-infrastructure"))
-    testCompileOnly("org.jetbrains.kotlinx:atomicfu:0.21.0")
+    testImplementation(commonDependency("org.apache.commons:commons-lang3"))
+    testImplementation(testFixtures(project(":compiler:tests-common")))
+    testImplementation(testFixtures(project(":compiler:tests-common-new")))
+    testImplementation(testFixtures(project(":compiler:test-infrastructure")))
+    testCompileOnly("org.jetbrains.kotlinx:atomicfu:0.25.0")
 
-    testApiJUnit5()
+    testImplementation(platform(libs.junit.bom))
+    testImplementation(libs.junit.jupiter.api)
+    testRuntimeOnly(libs.junit.jupiter.engine)
 
     testRuntimeOnly(kotlinStdlib())
     testRuntimeOnly(project(":kotlin-preloader")) // it's required for ant tests
-    testRuntimeOnly(project(":compiler:backend-common"))
     testRuntimeOnly(commonDependency("org.fusesource.jansi", "jansi"))
 
-    atomicfuJsClasspath("org.jetbrains.kotlinx:atomicfu-js:0.21.0") { isTransitive = false }
+    atomicfuJsClasspath("org.jetbrains.kotlinx:atomicfu-js:0.25.0") { isTransitive = false }
     atomicfuJsIrRuntimeForTests(project(":kotlinx-atomicfu-runtime"))  { isTransitive = false }
-    atomicfuJvmClasspath("org.jetbrains.kotlinx:atomicfu:0.21.0") { isTransitive = false }
-    atomicfuNativeKlib("org.jetbrains.kotlinx:atomicfu:0.21.0") { isTransitive = false }
+    atomicfuJvmClasspath("org.jetbrains.kotlinx:atomicfu:0.25.0") { isTransitive = false }
+    atomicfuNativeKlib("org.jetbrains.kotlinx:atomicfu:0.25.0") { isTransitive = false }
     atomicfuCompilerPluginForTests(project(":kotlin-atomicfu-compiler-plugin"))
     // Implicit dependencies on native artifacts to run native tests on CI
-    implicitDependencies("org.jetbrains.kotlinx:atomicfu-linuxx64:0.21.0") {
+    implicitDependencies("org.jetbrains.kotlinx:atomicfu-linuxx64:0.25.0") {
         attributes {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
         }
     }
-    implicitDependencies("org.jetbrains.kotlinx:atomicfu-macosarm64:0.21.0"){
+    implicitDependencies("org.jetbrains.kotlinx:atomicfu-macosarm64:0.25.0"){
         attributes {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
         }
     }
-    implicitDependencies("org.jetbrains.kotlinx:atomicfu-macosx64:0.21.0"){
+    implicitDependencies("org.jetbrains.kotlinx:atomicfu-macosx64:0.25.0"){
         attributes {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
         }
     }
-    implicitDependencies("org.jetbrains.kotlinx:atomicfu-mingwx64:0.21.0"){
+    implicitDependencies("org.jetbrains.kotlinx:atomicfu-iossimulatorarm64:0.25.0"){
+        attributes {
+            attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
+        }
+    }
+    implicitDependencies("org.jetbrains.kotlinx:atomicfu-mingwx64:0.25.0"){
         attributes {
             attribute(Usage.USAGE_ATTRIBUTE, objects.named(KotlinUsages.KOTLIN_API))
         }
@@ -145,59 +164,86 @@ dependencies {
         isTransitive = false
     }
 
-    testImplementation("org.jetbrains.kotlinx:atomicfu:0.21.0")
+    testImplementation("org.jetbrains.kotlinx:atomicfu:0.25.0")
 
-    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.9.1")
+    testRuntimeOnly(libs.junit.vintage.engine)
 }
 
 optInToExperimentalCompilerApi()
-optInToIrSymbolInternals()
+optInToUnsafeDuringIrConstructionAPI()
 
 sourceSets {
     "main" { projectDefault() }
-    "test" { projectDefault() }
+    "test" {
+        projectDefault()
+        java.srcDirs("testFixtures")
+        generatedTestDir()
+    }
 }
 
 testsJar()
-useD8Plugin()
 
-projectTest(jUnitMode = JUnitMode.JUnit5) {
-    useJUnitPlatform {
-        // Exclude all tests with the "atomicfu-native" tag. They should be launched by another test task.
-        excludeTags("atomicfu-native")
+projectTests {
+    testTask(jUnitMode = JUnitMode.JUnit5) {
+        useJUnitPlatform {
+            // Exclude all tests with the "atomicfu-native" tag. They should be launched by another test task.
+            excludeTags("atomicfu-native")
+        }
+        useJsIrBoxTests(buildDir = layout.buildDirectory)
+
+        workingDir = rootDir
+
+        dependsOn(":dist")
+        dependsOn(atomicfuJsIrRuntimeForTests)
+
+        val localAtomicfuJsIrRuntimeForTests: FileCollection = atomicfuJsIrRuntimeForTests
+        val localAtomicfuJsClasspath: FileCollection = atomicfuJsClasspath
+        val localAtomicfuJvmClasspath: FileCollection = atomicfuJvmClasspath
+        val localAtomicfuCompilerPluginClasspath: FileCollection = atomicfuCompilerPluginForTests
+
+        doFirst {
+            systemProperty("atomicfuJsIrRuntimeForTests.classpath", localAtomicfuJsIrRuntimeForTests.asPath)
+            systemProperty("atomicfuJs.classpath", localAtomicfuJsClasspath.asPath)
+            systemProperty("atomicfuJvm.classpath", localAtomicfuJvmClasspath.asPath)
+            systemProperty("atomicfu.compiler.plugin", localAtomicfuCompilerPluginClasspath.asPath)
+        }
     }
-    useJsIrBoxTests(version = version, buildDir = "$buildDir/")
 
-    workingDir = rootDir
+    nativeTestTask(
+        taskName = "nativeTest",
+        tag = "atomicfu-native",
+        requirePlatformLibs = true,
+        customCompilerDependencies = listOf(atomicfuJvmClasspath),
+        customTestDependencies = listOf(atomicfuNativeKlib),
+        compilerPluginDependencies = listOf(atomicfuCompilerPluginForTests)
+    ) {
+        val localAtomicfuNativeKlib: FileCollection = atomicfuNativeKlib
+        doFirst {
+            systemProperty("atomicfuNative.classpath", localAtomicfuNativeKlib.asPath)
+        }
 
-    dependsOn(":dist")
-    dependsOn(atomicfuJsIrRuntimeForTests)
-
-    // Depend on the test task that launches Native tests so that it will also run together with tests
-    // for all other targets if K/N is enabled
-    if (kotlinBuildProperties.isKotlinNativeEnabled) {
-        dependsOn(nativeTest)
+        // To workaround KTI-2421, we make these tests run on JDK 11 instead of the project-default JDK 8.
+        // Kotlin test infra uses reflection to access JDK internals.
+        // With JDK 11, some JVM args are required to silence the warnings caused by that:
+        jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
     }
 
-    val localAtomicfuJsIrRuntimeForTests: FileCollection = atomicfuJsIrRuntimeForTests
-    val localAtomicfuJsClasspath: FileCollection = atomicfuJsClasspath
-    val localAtomicfuJvmClasspath: FileCollection = atomicfuJvmClasspath
-
-    doFirst {
-        systemProperty("atomicfuJsIrRuntimeForTests.classpath", localAtomicfuJsIrRuntimeForTests.asPath)
-        systemProperty("atomicfuJs.classpath", localAtomicfuJsClasspath.asPath)
-        systemProperty("atomicfuJvm.classpath", localAtomicfuJvmClasspath.asPath)
+    testGenerator("org.jetbrains.kotlin.generators.tests.GenerateAtomicfuTestsKt", doNotSetFixturesSourceSetDependency = true) {
+        javaLauncher.set(project.getToolchainLauncherFor(JdkMajorVersion.JDK_11_0))
     }
+
+    withJvmStdlibAndReflect()
 }
 
 publish()
 standardPublicJars()
 
-val nativeTest = nativeTest(
-    taskName = "nativeTest",
-    tag = "atomicfu-native", // Include all tests with the "atomicfu-native" tag.
-    requirePlatformLibs = true,
-    customCompilerDependencies = listOf(atomicfuJvmClasspath),
-    customTestDependencies = listOf(atomicfuNativeKlib),
-    compilerPluginDependencies = listOf(atomicfuCompilerPluginForTests)
-)
+tasks.named("check") {
+    // Depend on the test task that launches Native tests so that it will also run together with tests
+    // for all other targets if K/N is enabled
+    if (kotlinBuildProperties.isKotlinNativeEnabled.get()) {
+        dependsOn(tasks.named("nativeTest"))
+    }
+}
+
+
