@@ -1,17 +1,19 @@
 plugins {
     kotlin("jvm")
-    id("jps-compatible")
+    id("project-tests-convention")
 }
 
 dependencies {
     testImplementation(intellijCore())
-    testImplementation(projectTests(":compiler:tests-common"))
+    testImplementation(testFixtures(project(":compiler:tests-common")))
 
     testImplementation(libs.jackson.dataformat.xml)
     testImplementation(libs.jackson.module.kotlin)
-    testImplementation("com.fasterxml.woodstox:woodstox-core:6.5.1")
+    testImplementation(libs.woodstox.core)
+    testImplementation(platform(libs.junit.bom))
+    testImplementation(libs.junit4)
 
-    testImplementation("org.eclipse.jgit:org.eclipse.jgit:5.13.0.202109080827-r")
+    testImplementation(libs.jgit)
 }
 
 sourceSets {
@@ -21,9 +23,44 @@ sourceSets {
     }
 }
 
-projectTest() {
-    dependsOn(":dist")
-    workingDir = rootDir
+open class CodeOwnersArgumentProviders @Inject constructor(
+    objectFactory: ObjectFactory
+) : CommandLineArgumentProvider {
+
+    @get:InputFiles
+    @get:PathSensitive(PathSensitivity.RELATIVE)
+    val scriptFile: ConfigurableFileCollection = objectFactory.fileCollection()
+
+    @get:InputFiles
+    @get:PathSensitive(PathSensitivity.RELATIVE)
+    val spaceCodeOwnersFile: ConfigurableFileCollection = objectFactory.fileCollection()
+
+    @get:InputFiles
+    @get:PathSensitive(PathSensitivity.RELATIVE)
+    val githubCodeOwnersFile: ConfigurableFileCollection = objectFactory.fileCollection()
+
+    override fun asArguments(): Iterable<String> = listOf(
+        "-DcodeOwnersTest.scriptFile=${scriptFile.singleFile.absolutePath}",
+        "-DcodeOwnersTest.spaceCodeOwnersFile=${spaceCodeOwnersFile.singleFile.absolutePath}",
+        "-DcodeOwnersTest.githubCodeOwnersFile=${githubCodeOwnersFile.singleFile.absolutePath}"
+    )
+}
+
+projectTests {
+    testTask(jUnitMode = JUnitMode.JUnit4) {
+        dependsOn(":dist")
+        workingDir = rootDir
+        javaLauncher.set(getToolchainLauncherFor(JdkMajorVersion.JDK_17_0))
+        jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
+
+        jvmArgumentProviders.add(objects.newInstance<CodeOwnersArgumentProviders>().apply {
+            scriptFile.from(rootDir.resolve(".space/generate-github-codeowners.sh"))
+            spaceCodeOwnersFile.from(rootDir.resolve(".space/CODEOWNERS"))
+            githubCodeOwnersFile.from(rootDir.resolve(".github/CODEOWNERS"))
+        })
+    }
+
+    withJvmStdlibAndReflect()
 }
 
 testsJar()
